[gd_scene load_steps=9 format=2]

[ext_resource path="res://CustomSignal/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://CustomSignal/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://CustomSignal/LifeBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://CustomSignal/lifebar_foreground.png" type="Texture" id=4]
[ext_resource path="res://full_screen_button.gd" type="Script" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 608, 0, 0, 0, 0, 0, 608, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 6 )
mob_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.164706, 0.270588, 0.243137, 1 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Player1" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 232, 306 )

[node name="LifeBar" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 423.0
margin_top = 38.0
margin_right = 615.0
margin_bottom = 78.0
max_value = 10.0
value = 10.0
texture_over = null
texture_progress = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
margin_left = 927.0
margin_top = 8.0
margin_right = 1017.0
margin_bottom = 41.0
text = "Borderless"
script = ExtResource( 5 )

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="health_changed" from="Player1" to="LifeBar" method="_on_Player_health_changed"]
[connection signal="health_reach_zero" from="LifeBar" to="." method="_on_LifeBar_health_reach_zero"]
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
